inou/prp/tests/errors/cmp_bool_int_eq.prp
/*
:name: cmp_bool_int_eq
:type: error
:error: mixes a bool with an int
:help: != 0
*/
// Comparing a boolean to an integer is a compile error — Pyrope never implicitly
// converts across a `==`. A bit-select `#[N]` yields `int(min=0,max=1)`, while a
// reduction `#^`/`#|` yields a bool, so `flag == bit` mixes the two. The diagnostic
// must suggest turning the integer side into a bool with `!= 0` (for `==`).
const x    = 0xA
const flag = x#^[0..=3]   // xor-reduction → bool
const bit  = x#[1]        // bit-select   → int(min=0, max=1)
const r = flag == bit     // bool == int  → error, hint: `bit != 0`
